Fixed bug #81037 PDO discards error message text from prepared statement