ext/pdo_mysql/tests/bug81037.phpt
@@ -1,0 +1,35 @@
+--TEST--
+Bug #81037 PDO discards error message text from prepared statement
+--SKIPIF--
+<?php
+if (!extension_loaded('pdo') || !extension_loaded('pdo_mysql')) die('skip not loaded');
+require_once(__DIR__ . DIRECTORY_SEPARATOR . 'skipif.inc');
+require_once(__DIR__ . DIRECTORY_SEPARATOR . 'mysql_pdo_test.inc');
+MySQLPDOTest::skip();
+?>
+--FILE--
+<?php
+require_once(__DIR__ . DIRECTORY_SEPARATOR . 'mysql_pdo_test.inc');
+
+$pdo = MySQLPDOTest::factory();
+$pdo->setAttribute(PDO::ATTR_ERRMODE, PDO::ERRMODE_EXCEPTION);
+$pdo->setAttribute(PDO::ATTR_EMULATE_PREPARES, false);
+MySQLPDOTest::createTestTable($pdo);
+
+$sql = "SELECT id FROM test WHERE label = :par";
+$stmt = $pdo->prepare($sql);
+try {
+    $stmt->execute();
+} catch (PDOException $e) {
+    echo $e->getMessage(), "\n";
+}
+$data = $stmt->fetchAll(PDO::FETCH_ASSOC);
+
+?>
+--CLEAN--
+<?php
+require __DIR__ . '/mysql_pdo_test.inc';
+MySQLPDOTest::dropTestTable();
+?>
+--EXPECT--
+SQLSTATE[HY000]: General error: 2031 No data supplied for parameters in prepared statement
